force-app/main/default/objects/ssot__AiAgentInteractionStep__dlm/ssot__AiAgentInteractionStep__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>true</isSegmentable>
        <isSqlDmo>false</isSqlDmo>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>AI Agent Interaction Step</labelOverride>
        <masterLabel>AI Agent Interaction Step</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
        <referenceEntityGroup>AI Agent Session</referenceEntityGroup>
        <referenceEntityName>AiAgentInteractionStep</referenceEntityName>
        <referenceEntitySubjectArea>Ai Agent Session</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>