force-app/main/default/objects/ssot__AiAgentInteractionStep__dlm/fields/KQ_PrevStepId__c.field-meta.xml
<CustomField>
    <fullName>KQ_PrevStepId__c</fullName>
    <label>Key Qualifier Previous Step</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Previous Step</labelOverride>
        <masterLabel>Key Qualifier Previous Step</masterLabel>
        <refAttrDeveloperName>KQ_PrevStepId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>