force-app/main/default/objects/ssot__AiAgentInteractionStep__dlm/fields/KQ_TelemetryTraceSpanId__c.field-meta.xml
<CustomField>
    <fullName>KQ_TelemetryTraceSpanId__c</fullName>
    <label>Key Qualifier Telemetry Trace Span</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Telemetry Trace Span</labelOverride>
        <masterLabel>Key Qualifier Telemetry Trace Span</masterLabel>
        <refAttrDeveloperName>KQ_TelemetryTraceSpanId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>