force-app/main/default/objects/ssot__AiAgentInteractionStep__dlm/fields/TopicApiName__c.field-meta.xml
<CustomField>
    <fullName>TopicApiName__c</fullName>
    <label>Topic Api Name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Topic Api Name</labelOverride>
        <masterLabel>Topic Api Name</masterLabel>
        <refAttrDeveloperName>TopicApiName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>